chore: Android Studio Analyzer
Mostly .toString(), final